test/__snapshots__/cli.spec.ts.snap
// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`examples > 001-hello-world.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "hello world
goodbye world
",
}
`;

exports[`examples > 002-invalid-line-number.bas 1`] = `
{
  "exitCode": 70,
  "stderr": "/home/josh/matanuska/examples/002-invalid-line-number.bas:<R3>:0 (after line 20): error: Expected line number
  "foo"
  ^
",
  "stdout": "",
}
`;

exports[`examples > 003-logical.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "false
true
",
}
`;

exports[`examples > 004-if.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "1 + 1 is 2!
1 + 1 remains equal to 2!
still 2!
",
}
`;

exports[`examples > 005-if-else.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "else if
",
}
`;

exports[`examples > 006-open-block.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "/home/josh/matanuska/examples/006-open-block.bas:40:4: error: else has not been closed
  40  else
      ^
",
  "stdout": "",
}
`;

exports[`examples > 007-for.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "1
2
3
4
5
6
7
8
9
10
",
}
`;

exports[`examples > 008-while.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "loop
",
}
`;

exports[`examples > 009-repeat.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "loop
",
}
`;

exports[`examples > 010-functions.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "2
hello world!
1
",
}
`;

exports[`examples > 011-datetime.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "1577869200000
",
}
`;

exports[`fixtures > for-onward.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "1
2
3
4
5
biggers
biggers
biggers
biggers
biggers
",
}
`;

exports[`fixtures > repeat-onward.bas 1`] = `
{
  "exitCode": 70,
  "stderr": "=== RUNTIME FAULT ===

--- Internal Stack Trace ---
RuntimeFault: Cannot cast nil to unknown
    at castFault (/Users/josh/code/jfhbrook/matanuska/value/cast.ts:29:11)
    at castNil (/Users/josh/code/jfhbrook/matanuska/value/cast.ts:260:10)
    at cast (/Users/josh/code/jfhbrook/matanuska/value/cast.ts:368:14)
    at Module.add (/Users/josh/code/jfhbrook/matanuska/operations.ts:76:24)
    at Runtime.<anonymous> (/Users/josh/code/jfhbrook/matanuska/runtime.ts:335:34)
    at Generator.next (<anonymous>)
    at asyncGeneratorStep (/Users/josh/code/jfhbrook/matanuska/runtime.ts:18:28)
    at _next (/Users/josh/code/jfhbrook/matanuska/runtime.ts:36:17)
    at /Users/josh/code/jfhbrook/matanuska/runtime.ts:41:13
    at new Promise (<anonymous>)

--- Versions ---
Matanuska BASIC: v0.0.1
swc: v1.7.26
vite: v1.7.26
Node.js: v25.2.1

This is a bug in Matanuska BASIC. If you copy this entire message and post it
to the issues tracker:

    https://github.com/jfhbrook/matanuska/issues

the developers will do their best to fix it - and more importantly, they will
owe you a beer, coffee or beverage of your choice. ðŸ»


",
  "stdout": "",
}
`;

exports[`fixtures > variable-increment.bas 1`] = `
{
  "exitCode": 70,
  "stderr": "=== RUNTIME FAULT ===

--- Internal Stack Trace ---
RuntimeFault: Cannot cast nil to unknown
    at castFault (/Users/josh/code/jfhbrook/matanuska/value/cast.ts:29:11)
    at castNil (/Users/josh/code/jfhbrook/matanuska/value/cast.ts:260:10)
    at cast (/Users/josh/code/jfhbrook/matanuska/value/cast.ts:368:14)
    at Module.add (/Users/josh/code/jfhbrook/matanuska/operations.ts:76:24)
    at Runtime.<anonymous> (/Users/josh/code/jfhbrook/matanuska/runtime.ts:335:34)
    at Generator.next (<anonymous>)
    at asyncGeneratorStep (/Users/josh/code/jfhbrook/matanuska/runtime.ts:18:28)
    at _next (/Users/josh/code/jfhbrook/matanuska/runtime.ts:36:17)
    at /Users/josh/code/jfhbrook/matanuska/runtime.ts:41:13
    at new Promise (<anonymous>)

--- Versions ---
Matanuska BASIC: v0.0.1
swc: v1.7.26
vite: v1.7.26
Node.js: v25.2.1

This is a bug in Matanuska BASIC. If you copy this entire message and post it
to the issues tracker:

    https://github.com/jfhbrook/matanuska/issues

the developers will do their best to fix it - and more importantly, they will
owe you a beer, coffee or beverage of your choice. ðŸ»


",
  "stdout": "",
}
`;

exports[`fixtures > while-onward.bas 1`] = `
{
  "exitCode": 70,
  "stderr": "TypeError: Invalid operand for < on undef: integer
  Value: 10
  From: integer
  To: invalid
",
  "stdout": "",
}
`;
